--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@deck.gl/layers": "^7.1.7",
     "@deck.gl/react": "^7.1.7",
     "cardinal-spline-js": "^2.3.6",
+    "color": "^3.1.2",
     "d3": "^5.7.0",
     "d3-array": "^2.0.3",
     "d3-force": "^1.0.6",
@@ -64,14 +65,10 @@
     "global": "^4.3.2",
     "lodash.isequal": "^4.5.0",
     "lodash.pick": "^4.4.0",
-    "ngraph.forcelayout": "^0.5.0",
-    "ngraph.graph": "^0.0.14",
     "probe.gl": "^3.0.3",
     "prop-types": "^15.6.0",
     "raf": "^3.4.1",
-    "styled-components": "^4.0.3",
-    "viz.js": "2.0.0",
-    "webcola": "^3.3.6"
+    "styled-components": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
@@ -90,7 +87,6 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
-    "color": "^3.0.0",
     "create-universal-package": "^3.4.6",
     "d3-scale-chromatic": "^1.3.3",
     "d3-voronoi": "^1.1.4",
@@ -106,6 +102,8 @@
     "jest": "^23.6.0",
     "jest-dom": "^2.1.1",
     "mini-css-extract-plugin": "^0.7.0",
+    "ngraph.forcelayout": "^0.5.0",
+    "ngraph.graph": "^0.0.14",
     "ngraph.generators": "^18.0.0",
     "prettier": "^1.15.1",
     "prettier-eslint-cli": "^4.7.1",
@@ -115,7 +113,9 @@
     "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "source-map-support": "^0.5.0",
-    "storybook-readme": "^5.0.5"
+    "storybook-readme": "^5.0.5",
+    "viz.js": "2.0.0",
+    "webcola": "^3.3.6"
   },
   "peerDependencies": {
     "react": "^16.5.0",
