Add script to publish storybook and gatsby websites at the same time

--- a/package.json
+++ b/package.json
@@ -37,9 +37,13 @@
     "-------- STORYBOOK --------": "",
     "storybook": "start-storybook -p 6006",
     "storybook:build": "build-storybook -c .storybook -o engdocs",
+    "storybook:deploy": "yarn storybook:build && NODE_DEBUG=gh-pages gh-pages -d engdocs -e storybook",
     "-------- GATSBY WEBSITE --------": "",
     "website": "cd website && yarn && npm run start",
-    "website:build": "cd website && yarn && yarn build"
+    "website:build": "cd website && yarn && yarn build",
+    "website:deploy": "yarn website:build && yarn deploy",
+    "-------- PUBLISH WEBSITES --------": "",
+    "publish-websites": "yarn storybook:deploy && yarn website:deploy"
   },
   "files": [
     "dist",
