--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "eslint-plugin-jest": "^22.0.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0",
     "jest-dom": "^2.1.1",
     "mini-css-extract-plugin": "^0.7.0",
